WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144891
[iOS] Find on page feels like it zooms in too much
https://bugs.webkit.org/show_bug.cgi?id=144891
Summary
[iOS] Find on page feels like it zooms in too much
mitz
Reported
2015-05-11 18:12:20 PDT
<
rdar://problem/19773721
>
Attachments
Use smart magnification for Find on Page
(6.21 KB, patch)
2015-05-11 18:26 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2015-05-11 18:26:02 PDT
Created
attachment 252917
[details]
Use smart magnification for Find on Page
mitz
Comment 2
2015-05-11 19:47:56 PDT
Fixed in <
http://trac.webkit.org/r184149
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug